# UULMIC

./: .gitignore  LICENSE  README.md  UULMIC_hexagonal_architecture.md  UULMI_hexagonal_architecture.md  main.py  pyproject.toml  system_check.py
configs/: default.yaml
configs/model/: eegnet.yaml  fbcnet.yaml  nfeeg.yaml
legacy/: test.py  test2.py  test_model.py
legacy/models/: __init__.py
legacy/preprocessing/: preprocessing.py
legacy/utils/: utils
src/: cli.py
src/adapters/data/: mne_adapter.py
src/adapters/models/: pytorch_adapter.py  sklearn_adapter.py
src/adapters/models/pytorch/architectures/: eegnet.py
src/adapters/preprocessing/: mne_preprocessing.py
src/adapters/tracking/: wandb_adapter.py
src/core/domain/: config.py  data.py  trial.py
src/core/ports/: loader.py  model.py  processor.py  tracker.py
src/notebooks/: inspect_data.ipynb
src/use_cases/: preprocess.py  train.py
src/utils/: concurrency.py
