[project]
name = "uulmi"
version = "0.1.0"
description = "Unilateral Upper Limb Motor Imagery Classification Pipeline"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "hydra-core>=1.3.2",
    "mne>=1.9.0",
    "numpy>=2.2.0",
    "psutil>=7.2.2",
    "pydantic>=2.10.0",
    "scikit-learn>=1.6.0",
    "torch",
    "wandb>=0.19.0",
    "python-dotenv>=1.0.1",
    "jupyter>=1.1.1",
]

[project.scripts]
uulmi = "src.cli:main"

[tool.setuptools.packages.find]
where = ["."]

[tool.uv]
package = true
python-preference = "only-managed"



[tool.pyright]
extraPaths = ["."]
